--- a/easybank/styles.css
+++ b/easybank/styles.css
@@ -16,6 +16,7 @@
 --LightGrayishBlue: hsl(220, 16%, 96%);
 --VeryLightGray: hsl(0, 0%, 98%);
 --White: hsl(0, 0%, 100%);
+--Whitesmoke: hsl(0, 0%, 96%);
 
 }
 
@@ -32,22 +33,25 @@
 }
 
 .navList{
-    display:inline-flex;
+    display:flex;
     list-style: none;
    
 }
 
 #headerList{
-    margin: 0 10px 0 10px ;
+    margin: 0 13px 0 13px ;
     color: var(--GrayishBlue);
     font-family: Arial, Helvetica, sans-serif;
     font-weight:600;
     font-size:20px;
     cursor: pointer;
+  
 }
 
 #headerList:hover{
     color: var(--DarkBlue);
+    border-bottom:5px solid var(--BrightCyan);
+   
 }
 
 .rqstBtn{
@@ -124,7 +128,7 @@
     border-radius: 9px;
     box-shadow:
     rgba(0,0,0,0.25) 
-    0px 54px 55px, rgba(0,0,0,0.12)
+    0px 74px 75px, rgba(0,0,0,0.12)
     0px -12px 30px,rgba(0,0,0,0.12)
      0px 4px 6px,rgba(0,0,0,0.17)
     0px 12px 13px,rgba(0,0,0,0.9)
@@ -188,7 +192,7 @@ padding:30px;
 #secPara{
     text-align:center;
     padding:0 30px 0 30px;
-    font-size: 14px;
+    font-size:calc(16px + 0.2vw);
     line-height:1.5rem;
     font-family: Arial, Helvetica, sans-serif;
     font-weight:600;
@@ -197,7 +201,7 @@ padding:30px;
 
 #rqBtn{
     padding:12px;
-    font-size: 16px;
+    font-size:calc(14px);
     margin: 20px;
     border-radius:999px;
     width: 180px;
@@ -210,7 +214,6 @@ padding:30px;
     height: auto;
     width: 100%;
     background-color: var(--VeryLightGray);
-    padding: 50px;
     text-align: center;
 }
 
@@ -229,9 +232,9 @@ line-height:1.5rem;
 color: var(--GrayishBlue);
 font-family: Arial, Helvetica, sans-serif;
 font-weight: 600;
-font-size: 16px;
+ font-size:calc(16px + 0.5vw);
 padding:0px;
-margin: 5px;
+margin: 10px;
 text-align:center;
 
 }
@@ -249,7 +252,7 @@ text-align:center;
     height: auto;
     width: 100%;
     text-align: center;
-    background-color: var(--White);
+    background-color: var(--Whitesmoke);
 }
 
 #articleHead{
@@ -258,7 +261,7 @@ text-align:center;
     font-family: Arial, Helvetica, sans-serif;
     font-size:18px;
     font-weight:400;
-    background-color:transparent;
+    background-color:var(--Whitesmoke);
 }
 
 .articleTabs{
@@ -268,7 +271,7 @@ text-align:center;
     width:100%;
     height: auto;
     margin: 0 auto;
-    background-color: var(--VeryLightGray);
+    background-color: var(--Whitesmoke);
     padding:0 20px 30px 20px;
 }
 
@@ -392,7 +395,7 @@ text-align:center;
     cursor: pointer;
 }
 
-
+/*MEDIA QUERIES*/
 
 @media(min-width:1300px){
     #rightNav{
@@ -425,18 +428,99 @@ text-align:center;
     width: 40%;
     height:auto;
     padding: 40px;
+    align-items:left;
+    justify-items:left;
+    text-align: left;
 }
 
 
 
 .bgDiv{
     
-    background-size:100%,cover;
-    background-position:right bottom,right center;
+    background-size:90%,100%;
+    background-position:bottom,left center;
     background-repeat: no-repeat,no-repeat;
     position:relative,relative;
+}
+
+.secTwo{
+    display:flex ;
+    flex-direction: column;
+    align-items: left;
+    justify-items: left;
+    padding: 50px;
+}
 
 
+.introDiv2{
+    display:flex ;
+    align-items:left;
+    text-align: left;
+}
 
+#introDiv{
+    text-align:left;
+    padding: 20px 0 20px 0;
+}
+
+#secTwoHead{
+    align-items:left;
+    text-align: left;
+   justify-items: left;
+    width: 100%;
+    padding-right: 200px;
+
+  
+}
+
+.articleSec{
+    padding: 50px;
+    background-color:var(--Whitesmoke);
+}
+
+#sPara{
+    text-align: left;
+     font-size:16px;
+     margin-left:10px;
+}
+
+#secPara{
+    text-align: left;
+    padding: 0;
+}
+.firstPara{
+    margin-right:800px ;
+}
+
+.articleTabs{
+    display: flex;
+    background-color:var(--Whitesmoke);
+  
+}
+
+.divTabs{
+    margin: 10px;
+}
+
+#articleHead{
+    text-align: left;
+    background-color:var(--Whitesmoke);
+}
+
+
+#rqBtn{
+    margin:20px 0 20px 0;
+    font-size: 15px;
+    
+} 
+
+.footerSec{
+    display: flex;
+    justify-content:space-evenly;
+    margin: 0 auto;
+    align-items: center;
+    justify-items: center;
+    padding: 50px 100px  50px 100px;
+  
 }
 }
